--- a/utbot-python-executor/src/main/python/utbot_executor/pyproject.toml
+++ b/utbot-python-executor/src/main/python/utbot_executor/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "utbot-executor"
-version = "1.9.2.dev1"
+version = "1.9.4"
 description = ""
 authors = ["Vyacheslav Tamarin <vyacheslav.tamarin@yandex.ru>"]
 readme = "README.md"
