Add `maxUnknownCoverageExecutionsPerMethodPerResultType` to `settings.properties`

--- a/utbot-intellij-main/src/main/resources/settings.properties
+++ b/utbot-intellij-main/src/main/resources/settings.properties
@@ -396,6 +396,13 @@
 #minimizeCrashExecutions=true
 
 #
+# Determines maximum number of executions with unknown coverage per method per result type.
+# In [ContestUsvm] it is useful if concrete fails, so we use symbolic execution result without trace.
+#
+# Default value is [10]
+#maxUnknownCoverageExecutionsPerMethodPerResultType=10
+
+#
 # Enable it to calculate unsat cores for hard constraints as well.
 # It may be usefull during debug.
 # Note: it might highly impact performance, so do not enable it in release mode.
