Update RD in all projects

--- a/gradle.properties
+++ b/gradle.properties
@@ -56,9 +56,10 @@ collectionsVersion=0.3.5
 # utbot-rd/build.gradle
 # utbot-rider/build.gradle.kts
 intellijPluginVersion=1.13.1
-# every time you bump rd version:
+# TODO every time you bump rd version:
 # 1. regenerate all models
 # 2. check if rider plugin works
+# 3. search for previous RD version (as string) in entire project and update it manually in places where it has to be hardcoded
 # TODO usvm-sbft-merge: UtBot engine uses RD 2023.1.2, while USVM uses RD 2023.2.0
 rdVersion=2023.2.0
 # to enable - add -PincludeRiderInBuild=true in build CLI
