Complete most `usvm-sbft-merge` TODOs

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,14 +41,11 @@ junit4PlatformVersion=1.9.0
 # NOTE: Mockito versions 5+ are not compatible with Java 8: https://www.davidvlijmincx.com/posts/upgrade-to-mockito-5
 mockitoVersion=4.11.0
 mockitoInlineVersion=4.11.0
-# TODO usvm-sbft-merge: UtBot engine uses ksmt 0.4.3, while USVM uses ksmt 0.5.13
 ksmtVersion=0.5.13
 sootVersion=4.4.0-FORK-2
 kotlinVersion=1.8.0
 log4j2Version=2.13.3
-# TODO usvm-sbft-merge: UtBot uses kotlinx.coroutines 1.6.3, while USVM uses kotlinx.coroutines 1.6.4
 coroutinesVersion=1.6.4
-# TODO usvm-sbft-merge: UtBot uses kotlinx.collections 0.3.4, while USVM uses kotlinx.collections 0.3.5
 collectionsVersion=0.3.5
 # after updating plugin version you should manually bump corresponding versions in plugin
 # as they cannot be set from properties
@@ -60,7 +57,6 @@ intellijPluginVersion=1.13.1
 # 1. regenerate all models
 # 2. check if rider plugin works
 # 3. search for previous RD version (as string) in entire project and update it manually in places where it has to be hardcoded
-# TODO usvm-sbft-merge: UtBot engine uses RD 2023.1.2, while USVM uses RD 2023.2.0
 rdVersion=2023.2.0
 # to enable - add -PincludeRiderInBuild=true in build CLI
 includeRiderInBuild=false
@@ -82,7 +78,6 @@ testNgVersion=7.6.0
 kamlVersion=0.51.0
 jacksonVersion=2.12.3
 kotlinxSerializationVersion=1.5.0
-# TODO usvm-sbft: USVM uses slf4j 1.6.1
 slf4jVersion=1.7.36
 eclipseAetherVersion=1.1.0
 mavenWagonVersion=3.5.1
@@ -103,7 +98,7 @@ commonsIOVersion=2.11.0
 javaxVersion=2.2
 jakartaVersion=3.1.0
 jacoDbVersion=1.4.3
-# TODO left outdated here to avoid exceeding GitHub packages drive space,
+# TODO could be left outdated here to avoid exceeding GitHub packages drive space,
 # TODO run `gradle publishToMavenLocal -Pversion={usvmVersion}` locally in usvm project and update {usvmVersion} locally
 usvmVersion=comp-231201-17
 
