--- a/utbot-intellij-main/src/main/resources/settings.properties
+++ b/utbot-intellij-main/src/main/resources/settings.properties
@@ -612,3 +612,10 @@
 #
 # Default value is [25]
 #maxSpringContextResetsPerMethod=25
+
+#
+# Add "test method start marker" and "test method end marker" around each test, can be used to
+# detect uncompilable tests and remove them.
+#
+# Default value is [false]
+#addTestMethodMarkers=false
