--- a/gradle.properties
+++ b/gradle.properties
@@ -108,10 +108,10 @@ springBootVersion=2.7.13
 springSecurityVersion=5.8.5
 
 # Put your GitHub username here to use utbot-junit-contest with usvm
-githubActor=<github_actor>
+githubActor=EgorkaKulikov
 # Use your GitHub token generated here -- https://github.com/settings/tokens/new?description=USVM&scopes=read:packages
 # Keep `read:packages` checkbox selected
-githubToken=<github token>
+githubToken=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
 
 # configuration for build server
 #
