--- a/gradle.properties
+++ b/gradle.properties
@@ -108,10 +108,10 @@ springBootVersion=2.7.13
 springSecurityVersion=5.8.5
 
 # Put your GitHub username here to use utbot-junit-contest with usvm
-githubActor=EgorkaKulikov
+githubActor=<actor>
 # Use your GitHub token generated here -- https://github.com/settings/tokens/new?description=USVM&scopes=read:packages
 # Keep `read:packages` checkbox selected
-githubToken=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
+githubToken=<token>
 
 # configuration for build server
 #
