--- a/.github/workflows/build-and-run-tests-from-branch.yml
+++ b/.github/workflows/build-and-run-tests-from-branch.yml
@@ -141,7 +141,6 @@ jobs:
 
       - name: Run tests
         run: |
-          echo ${{ secrets.PACKAGES_RO_TOKEN }} > /tmp/token
           gradle -PprojectType=Ultimate -PgithubActor=${{ github.actor }} -PgithubToken=${{ secrets.PACKAGES_RO_TOKEN }} --no-daemon --build-cache --no-parallel -Dorg.gradle.jvmargs=-Xmx6g -Dkotlin.daemon.jvm.options=-Xmx4g :utbot-framework-test:test ${{ matrix.project.TESTS_TO_RUN }}
 
       - name: Upload logs
@@ -210,7 +209,7 @@ jobs:
       - name: Run tests
         run: |
           cd utbot-spring-test
-          gradle -PprojectType=Community -PgithubActor=${{ github.actor }} -PgithubToken=${{ secrets.GITHUB_TOKEN }} --no-daemon --build-cache --no-parallel -Dorg.gradle.jvmargs=-Xmx6g -Dkotlin.daemon.jvm.options=-Xmx4g :utbot-spring-test:test
+          gradle -PprojectType=Community -PgithubActor=${{ github.actor }} -PgithubToken=${{ secrets.PACKAGES_RO_TOKEN }} --no-daemon --build-cache --no-parallel -Dorg.gradle.jvmargs=-Xmx6g -Dkotlin.daemon.jvm.options=-Xmx4g :utbot-spring-test:test
 
       - name: Upload logs
         if: ${{ always() }}
