--- a/.github/workflows/publish-plugin-from-branch.yml
+++ b/.github/workflows/publish-plugin-from-branch.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Build UTBot IntelliJ IDEA plugin
         run: |
-          gradle clean buildPlugin --no-daemon --build-cache --no-parallel ${{ matrix.configuration.extra_options }} -Dorg.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx4g -PsemVer=${{ env.VERSION }}
+          gradle clean buildPlugin --no-daemon --build-cache --no-parallel -PgithubActor=${{ github.actor }} -PgithubToken=${{ secrets.PACKAGES_RO_TOKEN }} ${{ matrix.configuration.extra_options }} -Dorg.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx4g -PsemVer=${{ env.VERSION }}
           cd utbot-intellij-main/build/distributions
           unzip utbot-intellij-main-${{ env.VERSION }}.zip
           rm utbot-intellij-main-${{ env.VERSION }}.zip
