USVM to UtBot adapters without contest hacks (#2710)
* Introduce `Tool.USVM` in `ContestEstimator`, implement `runUsvmGeneration` (#2666)

* Add `Tool.USVM` in `ContestEstimator`, implement `runUsvmGeneration`

* Remove redundant TODO

* Bump UtBot dependencies version to match USVM dependencies

* Use `UTestExecutionResult.trace` instead of `JcCoverage`

* Bump ksmt version to `0.5.13`

* Hacks similar to contest 2023 ones (#2676)

* Initial implementations of the adapter from JcExecution to UtExecution (#2677)

* Some awful attempts

* Initially implemented a converter of UTestInst to UtModel

* Refactor JcToUtModelConverter basing on UTestInst2UtModel converter

* Some steps to implement JcToUtExecutionConverter

* Implement minimalistic jc to ut execution conversion, enable codegen

* Some improvements

* DeepMapper for models is used

* Corrections

* Some improvements to JcToUtModelConverter

* Further improvements to JcToUtModelConverter

* Another converter little improvement

* Improve `UtExecutionFailure` creation

* Finish implementing `JcToUtModelConverter`

* Refactor nullability in `JcToUtModelConverter` and `JcToUtExecutionConverter`

* First version of JC to UT converters without overusing `Descriptor2ValueConverter`

* Processed forgotten call method expression

* Make conversion more class-friendly (do not fail if one method cause failure)

* Make it possible to use samples in ContestEstimator

* Tested on all primitives

* contrflow tests added

* More test classes added

* Add `build/output/test/samples` to `utbot-junit-contest` test projects

* Steps to avoid duplicating statements

* Make it working correct on IntExamples.max

* Remove OptimizeImportsProcessor (seems it was not called, but a source of bugs)

* Process UTestStaticMethodCall

* Comment out includes for IDE related projects in `settings.gradle.kts`

* Avoid using burningwave to export modules on Java 8

* Fix 

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,22 +41,23 @@ junit4PlatformVersion=1.9.0
 # NOTE: Mockito versions 5+ are not compatible with Java 8: https://www.davidvlijmincx.com/posts/upgrade-to-mockito-5
 mockitoVersion=4.11.0
 mockitoInlineVersion=4.11.0
-ksmtVersion=0.4.3
+ksmtVersion=0.5.13
 sootVersion=4.4.0-FORK-2
 kotlinVersion=1.8.0
 log4j2Version=2.13.3
-coroutinesVersion=1.6.3
-collectionsVersion=0.3.4
+coroutinesVersion=1.6.4
+collectionsVersion=0.3.5
 # after updating plugin version you should manually bump corresponding versions in plugin
 # as they cannot be set from properties
 # utbot-intellij/build.gradle.kts
 # utbot-rd/build.gradle
 # utbot-rider/build.gradle.kts
 intellijPluginVersion=1.13.1
-# every time you bump rd version:
+# TODO every time you bump rd version:
 # 1. regenerate all models
 # 2. check if rider plugin works
-rdVersion=2023.1.2
+# 3. search for previous RD version (as string) in entire project and update it manually in places where it has to be hardcoded
+rdVersion=2023.2.0
 # to enable - add -PincludeRiderInBuild=true in build CLI
 includeRiderInBuild=false
 jacocoVersion=0.8.8
@@ -96,11 +97,21 @@ commonsLoggingVersion=1.2
 commonsIOVersion=2.11.0
 javaxVersion=2.2
 jakartaVersion=3.1.0
+jacoDbVersion=1.4.3
+# TODO could be left outdated here to avoid exceeding GitHub packages drive space,
+# TODO run `gradle publishToMavenLocal -Pversion={usvmVersion}` locally in usvm project and update {usvmVersion} locally
+usvmVersion=comp-231201-17
 
 # use latest Java 8 compaitable Spring and Spring Boot versions
 springVersion=5.3.28
 springBootVersion=2.7.13
 springSecurityVersion=5.8.5
+
+# Put your GitHub username here to use utbot-junit-contest with usvm
+githubActor=<actor>
+# Use your GitHub token generated here -- https://github.com/settings/tokens/new?description=USVM&scopes=read:packages
+# Keep `read:packages` checkbox selected
+githubToken=<token>
 
 # configuration for build server
 #
