--- a/utbot-intellij-main/src/main/resources/settings.properties
+++ b/utbot-intellij-main/src/main/resources/settings.properties
@@ -396,6 +396,13 @@
 #minimizeCrashExecutions=true
 
 #
+# Determines maximum number of executions with unknown coverage per method per result type.
+# In [ContestUsvm] it is useful if concrete fails, so we use symbolic execution result without trace.
+#
+# Default value is [10]
+#maxUnknownCoverageExecutionsPerMethodPerResultType=10
+
+#
 # Enable it to calculate unsat cores for hard constraints as well.
 # It may be usefull during debug.
 # Note: it might highly impact performance, so do not enable it in release mode.
@@ -605,3 +612,10 @@
 #
 # Default value is [25]
 #maxSpringContextResetsPerMethod=25
+
+#
+# Add "test method start marker" and "test method end marker" around each test, can be used to
+# detect uncompilable tests and remove them.
+#
+# Default value is [false]
+#addTestMethodMarkers=false
