Introduce utbot-usvm

--- a/gradle.properties
+++ b/gradle.properties
@@ -104,6 +104,9 @@ springVersion=5.3.28
 springBootVersion=2.7.13
 springSecurityVersion=5.8.5
 
+approximationsVersion=bfce4eedde
+usvmVersion=72924ad
+
 # configuration for build server
 #
 # the following options are passed to gradle command explicitly (see appropriate workflow):
