--- a/gradle.properties
+++ b/gradle.properties
@@ -18,11 +18,15 @@ golandVersion=2023.2
 # ALL, NOJS
 buildType=NOJS
 
+# IDE types that supports appropriate language
 javaIde=IC,IU
 pythonIde=IC,IU,PC,PY
 jsIde=IU,PY
 jsBuild=ALL
 goIde=IU,GO
+
+# IDE types that require Pycharm plugin
+pycharmIdeType=PC,PY
 
 # In order to run Android Studio instead of IntelliJ Community, specify the path to your Android Studio installation
 #androidStudioPath=your_path_to_android_studio
