--- a/.github/workflows/publish-plugin-from-branch.yml
+++ b/.github/workflows/publish-plugin-from-branch.yml
@@ -52,7 +52,7 @@ jobs:
             directory: utbot-intellij-main
           - plugin_type: PY
             extra_options: "-PideType=PY -PprojectType=Ultimate"
-            directory: utbot-intellij-python
+            directory: utbot-python-pycharm
     runs-on: ubuntu-20.04
     container: unittestbot/java-env:java17-zulu-jdk-gradle7.6.1-kotlinc1.8.0
     steps:
