--- a/utbot-framework/build.gradle
+++ b/utbot-framework/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     api project(':utbot-rd')
     api project(':utbot-modificators-analyzer')
 
+    api project(':utbot-usvm')
+
     implementation group: 'com.jetbrains.rd', name: 'rd-framework', version: rdVersion
     implementation group: 'com.jetbrains.rd', name: 'rd-core', version: rdVersion
 
