Resrtore Python IDE

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ buildType=NOJS
 
 # IDE types that supports appropriate language
 javaIde=IC,IU
-pythonIde=PC,PY
+pythonIde=IC,IU,PC,PY
 jsIde=IU,PY
 jsBuild=ALL
 goIde=IU,GO
