Set `zip64 = true` in `:utbot-cli-go:jar`, `:utbot-cli-js:jar`, `:utbot-cli-python:jar` Gradle tasks

--- a/utbot-cli-go/build.gradle
+++ b/utbot-cli-go/build.gradle
@@ -57,6 +57,7 @@ classes {
 }
 
 jar {
+    zip64 = true
     manifest {
         attributes 'Main-Class': 'org.utbot.cli.go.ApplicationKt'
         attributes 'Bundle-SymbolicName': 'org.utbot.cli.go'
