--- a/utbot-cli-js/build.gradle
+++ b/utbot-cli-js/build.gradle
@@ -55,6 +55,7 @@ classes {
 }
 
 jar {
+    zip64 = true
     manifest {
         attributes 'Main-Class': 'org.utbot.cli.js.ApplicationKt'
         attributes 'Bundle-SymbolicName': 'org.utbot.cli.js'
