update of usvm-python-runner

--- a/gradle.properties
+++ b/gradle.properties
@@ -135,3 +135,5 @@ org.gradle.parallel=true
 org.gradle.caching=true
 # there is no need to override the option below because parallel execution is disabled by --no-parallel
 org.gradle.workers.max=8
+
+usvmPythonRunnerHash=0b8aff0
