--- a/utbot-cli-python/build.gradle
+++ b/utbot-cli-python/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation group: 'com.github.ajalt.clikt', name: 'clikt', version: cliktVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4j2Version
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4j2Version
+
+    implementation group: 'org.usvm', name: 'usvm-python-commons', version: usvmPythonRunnerHash
 }
 
 processResources {
